[package]
name = "pgstac"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = "1"
serde_json = "1"
stac = "0.2"
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
async_once = "0.2"
bb8 = "0.8"
bb8-postgres = "0.8"
geojson = "0.24"
lazy_static = "1.4"
pgstac-test = { path = "pgstac-test" }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
