[package]
name = "pgstac"
version = "0.0.2"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
edition = "2021"
description = "Rust interface for pgstac"
homepage = "https://github.com/gadomski/pgstac-rs"
repository = "https://github.com/gadomski/pgstac-rs"
license = "MIT OR Apache-2.0"
keywords = ["geospatial", "stac", "metadata", "raster", "database"]
categories = ["database", "data-structures", "science"]

[dependencies]
geojson = "0.24"
serde = "1"
serde_json = "1"
stac = "0.2"
thiserror = "1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }

[dev-dependencies]
async_once = "0.2"
bb8 = "0.8"
bb8-postgres = "0.8"
lazy_static = "1.4"
pgstac-test = { path = "pgstac-test" }
tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
